tests/parser/var_err14.mtp
(* variable section start *)

(*missing left parenthesis*)
var test: array 20) of integer;

begin

end
.
